[project]
name = "nimb"
version = "0.2.0"
description = "NIMB - NIMB IRC Matrix Bridge"
readme = "etc/PKG-README.md"
license = {text = "MIT"}
keywords = ["irc", "matrix", "bridge", "service"]
authors = [{name = "Susam Pal"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Communications :: Chat :: Internet Relay Chat",
  "Topic :: Internet",
  "Topic :: Utilities"
]

[project.urls]
homepage = "https://github.com/susam/nimb"

[project.scripts]
nimb = "nimb:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# The presence of etc/ directory prevents setuptools from
# autodiscovering nimb.py, so we explicitly ask it to include this
# module.
[tool.setuptools]
py-modules = ["nimb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "COM812"]
